style(has-current-trip): fix align-items value

--- a/src/features/dashboard/HasCurrentTrip/has-current-trip.styles.scss
+++ b/src/features/dashboard/HasCurrentTrip/has-current-trip.styles.scss
@@ -2,13 +2,13 @@
   .card-trip__content {
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: flex-end;
     gap: $spacing-sm;
   }
   &__period {
     white-space: nowrap;
     display: flex;
     gap: $spacing-sm;
-    align-items: start;
+    align-items: flex-start;
   }
 }
